Fixes #1008 extra dividing line in monograph catalog results

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -157,12 +157,17 @@ footer.press {
     padding-left: 0;
   }
 
+  #sortAndPerPage {
+    border-bottom: none;
+  }
+
   // MONOGRAPH ASSETS - LIST VIEW
   #documents.documents-list {
 
     .document {
       margin-bottom: 2em;
       padding-top: 1.5em;
+      border-bottom: none;
 
       .document-thumbnail {
         img {
