store logo in /public/uploads & allow removal

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -124,6 +124,13 @@ footer.press {
 
 }
 ///////////////////////////////////
+// PRESS ADD/EDIT FORM
+///////////////////////////////////
+.press-form-logo {
+  height: 100px;
+  width: auto;
+}
+///////////////////////////////////
 // MONOGRAPH PAGE
 ///////////////////////////////////
 .monograph {
