--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -162,7 +162,7 @@ $heb-black-80: #342f2e;
 
   .press {
 
-    h2:nth-child(2) {
+    h2:first-child {
       margin-bottom: 1.5em;
     }
 
@@ -397,7 +397,7 @@ $iu-midnight: #006298;
 
   .press {
 
-    h2:nth-child(2) {
+    h2:first-child {
       margin-bottom: 1.5em;
     }
 
@@ -618,7 +618,7 @@ $um-black-80: #342f2e;
 
   .press {
 
-    h2:nth-child(2) {
+    h2:first-child {
       margin-bottom: 1.5em;
     }
 
@@ -840,7 +840,7 @@ $umn-white: #fff;
 
   .press {
 
-    h2:nth-child(2) {
+    h2:first-child {
       margin-bottom: 1.5em;
     }
 
@@ -1067,7 +1067,7 @@ $fulcrum-light-2: #bec4cc;
 
   .press {
 
-    h2:nth-child(2) {
+    h2:first-child {
       margin-bottom: 1.5em;
     }
 
@@ -1312,7 +1312,7 @@ $nyu-gray-2: #342f2e;
 
   .press {
 
-    h2:nth-child(2) {
+    h2:first-child {
       margin-bottom: 1.5em;
     }
 
@@ -1560,7 +1560,7 @@ $psu-gray-1: #3F4550;
 
   .press {
 
-    h2:nth-child(2) {
+    h2:first-child {
       margin-bottom: 1.5em;
     }
 
