remove extra border as in mono catalog

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -123,6 +123,16 @@ footer.press {
   }
 
 }
+.press {
+
+  #documents.documents-list {
+
+    .document {
+      border-bottom: none;
+    }
+
+  }
+}
 ///////////////////////////////////
 // PRESS ADD/EDIT FORM
 ///////////////////////////////////
