--- a/app/views/hyrax/file_sets/show.html.erb
+++ b/app/views/hyrax/file_sets/show.html.erb
@@ -45,10 +45,9 @@
         <div class="col-sm-12">
           <h2 id="asset-title"><%= @presenter.title %></h2>
           <h3>From <em><%= link_to @presenter.monograph.title, main_app.monograph_catalog_path(@presenter.monograph_id) %></em>
-            <% if @presenter.monograph.creator_family_name.present? %>
-              by <%= @presenter.monograph.creator_given_name %> <%= @presenter.monograph.creator_family_name %><%= contributors_string(@presenter.monograph.contributor) %>
+            <% if @presenter.monograph.authors? %>
+              by <%= @presenter.monograph.authors %>
             <% end %>
-
             <% if @presenter.monograph.editors? %>
               edited by <%= @presenter.monograph.editors %>
             <% end %>
