--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -29,8 +29,9 @@
       <% if can? :edit, @monograph_presenter %>
         <%= link_to "Manage Monograph and Files", main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
       <% end %>
-      <h3><%= @monograph_presenter.creator_given_name %> <%= @monograph_presenter.creator_family_name %><%= contributors_string(@monograph_presenter.contributor) %></h3>
-
+      <% if @monograph_presenter.authors? %>
+        <h3><%= render_markdown @monograph_presenter.authors %></h3>
+      <% end %>
       <% if @monograph_presenter.editors? %>
         <h3>Edited by <%= @monograph_presenter.editors %></h3>
       <% end %>
