--- a/app/views/hyrax/file_sets/_media_embedded.erb
+++ b/app/views/hyrax/file_sets/_media_embedded.erb
@@ -1,18 +1,19 @@
 <figure class="image" title="<%= @presenter.alt_text.first %>">
   <% if @presenter.image? %>
-  <div id="image"></div>
-  <script>
-    $().ready(function() {
-      var map, layer;
-      map = L.map('image', {
-        center: [0, 0],
-        crs: L.CRS.Simple,
-        zoom: 0
+    <% riiif_url = "/image-service/#{@presenter.id}/info.json" %>
+    <div id="image"></div>
+    <script>
+      $().ready(function() {
+        var map, layer;
+        map = L.map('image', {
+          center: [0, 0],
+          crs: L.CRS.Simple,
+          zoom: 0
+        });
+        layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true } );
+        layer.addTo(map);
       });
-      layer = L.tileLayer.iiif("<%= riiif.info_path(@presenter.id) %>");
-      layer.addTo(map);
-    });
-  </script>
+    </script>
   <% else %>
   <%= media_display @presenter %>
   <% end %>
