default (blank) footer_block_c behavior

--- a/app/views/presses/_form.html.erb
+++ b/app/views/presses/_form.html.erb
@@ -27,7 +27,7 @@
   <%= f.input :press_url, label: 'Publisher\'s Current Website Address', required: true %>
   <%= f.input :google_analytics, label: 'Google Analytics Tracking ID' %>
   <%= f.input :typekit, label: 'Typekit ID' %>
-  <%= f.input :footer_block_a, include_blank: false, include_hidden: false %>
-  <%= f.input :footer_block_c, include_blank: false, include_hidden: false %>
+  <%= f.input :footer_block_a %>
+  <%= f.input :footer_block_c %>
   <%= f.submit label: 'Save Publisher' %>
 <% end %>
