--- a/app/views/monograph_catalog/_facet_pivot.html.erb
+++ b/app/views/monograph_catalog/_facet_pivot.html.erb
@@ -2,24 +2,34 @@
   <ul class="facet-values list-unstyled">
     <% display_facet.items.each do |item| -%>
       <li>
-        <div class="panel panel-default <%= 'facet_limit-active' if facet_field_in_params?(facet_field) %>">
-          <div class="<%= "collapsed" if should_collapse_facet?(facet_field) %> collapse-toggle panel-heading" data-toggle="collapse" data-target="#facet-<%= item.field %>-<%= item.value %>">
-            <h3 class="panel-title facet-field-heading">
-              <span class="title-facet-values">
-                <% if facet_in_params?(item.field, item) %>
-                  <%= render_selected_facet_pivot_value(item.field, item) %>
-                <% else %>
-                  <%= render_facet_pivot_value(item.field, item, display_facet) %>
-                <% end -%>
-              </span>
-            </h3>
-          </div>
-          <div id="facet-<%= item.field %>-<%= item.value %>" class="panel-collapse facet-content <%= should_collapse_facet?(facet_field) ? 'collapse' : 'in' %>">
-            <div class="panel-body">
-              <%= render partial: 'facet_pivot_child', locals: { display_facet: item } %>
+        <% if item.items.present? %>
+          <div class="panel panel-default <%= 'facet_limit-active' if facet_field_in_params?(facet_field) %>">
+            <div class="<%= "collapsed" if should_collapse_facet?(facet_field) %> collapse-toggle panel-heading" data-toggle="collapse" data-target="#facet-<%= item.field %>-<%= item.value %>">
+              <h3 class="panel-title facet-field-heading">
+                <span class="title-facet-values">
+                  <% if facet_in_params?(item.field, item) %>
+                    <%= render_selected_facet_pivot_value(item.field, item) %>
+                  <% else %>
+                    <%= render_facet_pivot_value(item.field, item, display_facet) %>
+                  <% end -%>
+                </span>
+              </h3>
+            </div>
+            <div id="facet-<%= item.field %>-<%= item.value %>" class="panel-collapse facet-content <%= should_collapse_facet?(facet_field) ? 'collapse' : 'in' %>">
+              <div class="panel-body">
+                <%= render partial: 'facet_pivot_child', locals: { display_facet: item } %>
+              </div>
             </div>
           </div>
-        </div>
+        <% else %>
+          <span class="facet-values">
+            <% if facet_in_params?(item.field, item) %>
+              <%= render_selected_facet_pivot_value(item.field, item) %>
+            <% else %>
+              <%= render_facet_pivot_value(item.field, item, display_facet) %>
+            <% end -%>
+          </span>
+        <% end %>
       </li>
     <% end %>
   </ul>
