--- a/app/views/layouts/embedded.html.erb
+++ b/app/views/layouts/embedded.html.erb
@@ -10,27 +10,9 @@
       padding: 0;
       margin: 0;
     }
-    html, body, figure {
+    html, body, figure, #image {
       height: 100%;
       width: 100%;
-    }
-
-    #image {
-      height: 95% ;
-      width: 100%;
-    }
-
-    #embed-caption {
-      height: auto;
-      width: 100%;
-    }
-
-    figcaption {
-      font-style: italic;
-      margin-top: 1em;
-      em {
-        font-style: normal;
-      }
     }
   </style>
 
