Resolves #1108 'Add a redirection control field to FileSets'.

--- a/app/views/hyrax/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/hyrax/file_sets/_attribute_rows_info.html.erb
@@ -13,3 +13,4 @@
 <%= presenter.attribute_to_html(:keywords, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:content_type, label: t('content_type'), render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:language, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:redirect_to) %>
