--- a/app/views/hyrax/file_sets/_form.html.erb
+++ b/app/views/hyrax/file_sets/_form.html.erb
@@ -39,6 +39,7 @@
           <%= f.input :book_needs_handles, input_html: { class: 'form-control' } %>
           <%= f.input :doi, input_html: { class: 'form-control' } %>
           <%= f.input :hdl, input_html: { class: 'form-control' } %>
+          <%= f.input :redirect_to, input_html: { class: 'form-control' } %>
           <%= f.input :permissions_expiration_date, input_html: { class: 'form-control required' }, placeholder: 'YYYY-MM-DD' %>
           <%= f.input :rights_granted, input_html: { class: 'form-control' } %>
           <%= f.input :rights_granted_creative_commons, input_html: { class: 'form-control' } %>
