tweak embed style/codes; reorder bowser; Able Player bugfix

--- a/app/assets/stylesheets/embed/embed_styles.scss
+++ b/app/assets/stylesheets/embed/embed_styles.scss
@@ -10,6 +10,10 @@ html, body, figure, #image, .able, .able-wrapper{
     height: 100%;
 }
 
+html {
+  overflow:hidden;
+}
+
 .able-wrapper {
     .able {
         box-shadow: 0 0 0 0 transparent;
