--- a/app/views/hyrax/file_sets/media_display/_video.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_video.html.erb
@@ -3,7 +3,11 @@
     <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
 
-<video id="video" preload="auto" data-able-player data-include-transcript="false">
+<video id="video"
+       preload="auto"
+       data-able-player
+       data-include-transcript="false"
+       poster="<%= hyrax.download_path(@presenter.id, file: 'jpeg') %>">
   <source src="<%= hyrax.download_path(file_set, file: 'webm') %>" type="video/webm" />
   <source src="<%= hyrax.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
   <% if file_set.transcript.present? %>
