--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -36,11 +36,19 @@
 
       cozy.control.contents({ region: 'top.toolbar.left' }).addTo(reader);
       cozy.control.widget.panel({
-          region: 'top.toolbar.left',
-          data: { title: "<%= @citable_link %>"},
-  	template: `<div class="permalink-label"><span class="u-screenreader">Permalink</span><form><input data-slot="title" type="text" id="permalink" value="" readonly="readonly" onclick="this.select(); document.execCommand('copy');"></form></div>`,
+        region: 'top.toolbar.left',
+        data: { title: "<%= @citable_link %>"},
+  	    template: `<div class="permalink-label"><span class="u-screenreader">Permalink</span><form><input data-slot="title" type="text" id="permalink" value="" readonly="readonly" onclick="this.select(); document.execCommand('copy');"></form></div>`,
       }).addTo(reader);
       cozy.control.citation({ region: 'top.toolbar.left' }).addTo(reader);
+
+      <% unless Heliotrope::Application.config.cozy_epub_engine == 'readium' %>
+        cozy.control.search({
+          region: 'top.toolbar.left',
+          searchUrl: "<%= @search_url %>"
+        }).addTo(reader);
+      <% end %>
+
       cozy.control.widget.button({
                         region: 'top.toolbar.right',
                         template: '<button class="button--sm" data-toggle="button" data-slot="label"></button>',
