--- a/app/views/press_catalog/_thumbnail_list_monograph.html.erb
+++ b/app/views/press_catalog/_thumbnail_list_monograph.html.erb
@@ -1,5 +1,9 @@
 <%- if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
 <div class="col-sm-3">
-  <a href="<%= polymorphic_path(url_for_document(document)) %>" ><img class="img-responsive" src="/image-service/<%=document.representative_id%>/full/225,/0/default.jpg" alt="<%= document.title.first %>"></a>
+  <% presenter = Hyrax::MonographPresenter.new(document, current_ability) %>
+  <a href="<%= polymorphic_path(url_for_document(document)) %>" >
+    <img class="img-responsive" src="/image-service/<%=document.representative_id%>/full/225,/0/default.jpg"
+         alt="<%= presenter.representative_alt_text %>">
+  </a>
 </div>
 <%- end %>
