--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -18,30 +18,39 @@
                     location: 'Ann Arbor, MI'
                 }
             });
+      // Close reader/Return to previous screen widget
       cozy.control.widget.button({
   	    region: 'top.header.left',
   	    data: { label: '<i class="icon-x oi" data-glyph="x" aria-hidden="true"></i>'},
   	    template: `<button class="button--sm cozy-close" data-toggle="button" data-slot="label"></button>`,
   	    onClick: function() { window.location = "<%= "#{@back_link}" %>"; }
       }).addTo(reader);
+      // Press brand widget
       // TO-DO: only show logo for publishers that also have CSS overrides. Currently only HEB has this.
-      // <% if defined? @subdomain %>
-      //cozy.control.widget.panel({
-      //  region: 'top.header.left',
-      //  template: `<div class="logo"><%= image_tag logo(@subdomain), alt: @subdomain %>`,
-      //  data: { title: "<%= @subdomain %>" }
-      //}).addTo(reader);
-      // <% end %>
+      <% if defined? @subdomain %>
+        // only include logos for heb and nyupress at this point
+        <% if %w[heb nyupress].include? @subdomain %>
+          cozy.control.widget.panel({
+            region: 'top.header.left',
+            template: `<div class="logo"><%= image_tag logo(@subdomain), alt: @subdomain %>`,
+            data: { title: "<%= @subdomain %>" }
+          }).addTo(reader);
+          <% end %>
+      <% end %>
+      // Book/chapter title widget
       cozy.control.title({ region: 'top.header.left' }).addTo(reader);
 
+      // Table of contents widget
       cozy.control.contents({ region: 'top.toolbar.left' }).addTo(reader);
+      // Permalink widget
       cozy.control.widget.panel({
         region: 'top.toolbar.left',
         data: { title: "<%= @citable_link %>"},
   	    template: `<div class="permalink-label"><span class="u-screenreader">Permalink</span><form><input data-slot="title" type="text" id="permalink" value="" readonly="readonly" onclick="this.select(); document.execCommand('copy');"></form></div>`,
       }).addTo(reader);
+      // Citation widget
       cozy.control.citation({ region: 'top.toolbar.left' }).addTo(reader);
-
+      // Search widget
       <% unless Heliotrope::Application.config.cozy_epub_engine == 'readium' %>
         cozy.control.search({
           region: 'top.toolbar.left',
@@ -49,6 +58,7 @@
         }).addTo(reader);
       <% end %>
 
+      // Fullscreen widget
       cozy.control.widget.button({
                         region: 'top.toolbar.right',
                         template: '<button class="button--sm" data-toggle="button" data-slot="label"></button>',
@@ -57,12 +67,19 @@
                             reader.requestFullscreen();
                         }
                     }).addTo(reader);
+      // Reading preferences widget
       cozy.control.preferences({ region: 'top.toolbar.right' }).addTo(reader);
+
+      // Paging widgets
       // cozy.control.pageFirst({ region: 'left.sidebar' }).addTo(reader);
       cozy.control.pagePrevious({ region: 'left.sidebar' }).addTo(reader);
       cozy.control.pageNext({ region: 'right.sidebar' }).addTo(reader);
       // cozy.control.pageLast({ region: 'right.sidebar' }).addTo(reader);
+
+      // Publisher/copyright widgets
       cozy.control.publicationMetadata({ region: 'bottom.footer' }).addTo(reader);
+
+      // Initiate EPUB Reader
       reader.start();
     }
   </script>
