--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -18,20 +18,23 @@
     </nav>
   </div>
 <% end %><!-- provide :page_header -->
-<% provide :sidebar do %>
-  <div id="maincontent" class="monograph-info">
+
+<!-- if has EPUB, display monograph metadata on top, otherwise, show in sidebar -->
+<% if @monograph_presenter.epub? %>
+  <div class="row monograph-info-epub">
     <% if @monograph_presenter.monograph_coins_title? %>
       <!-- COinS for Zotero, etc -->
       <span class="Z3988" title="<%= @monograph_presenter.monograph_coins_title %>"></span>
     <% end %>
-    <div class="monograph-cover">
-      <%= render 'hyrax/base/representative_media', presenter: @monograph_presenter %>
-    </div><!-- /.monograph-cover -->
-    <div class="monograph-metadata">
-      <h2><%= @monograph_presenter.title %></h2>
+    <div class="col-sm-3 monograph-cover">
+      <img class="img-responsive" src="/image-service/<%= @monograph_presenter.representative_id %>/full/225,/0/default.jpg"
+           alt="<%= @monograph_presenter.representative_alt_text %>">
       <% if can? :edit, @monograph_presenter %>
         <%= link_to t('.can_edit'), main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
       <% end %>
+    </div><!-- /.monograph-cover -->
+    <div class="col-sm-9 monograph-metadata">
+      <h2><%= @monograph_presenter.title %></h2>
       <% if @monograph_presenter.authors? %>
         <h3><%= render_markdown @monograph_presenter.authors %></h3>
       <% end %>
@@ -41,10 +44,11 @@
       <div class="description">
         <%= render_markdown @monograph_presenter.description.first || '' %>
       </div><!-- /.description -->
-      <div class="pageviews">
-        <p><%= t('.pageviews_html', count: number_with_delimiter(@monograph_presenter.pageviews)) %></p>
-      </div><!-- /.pageviews -->
-      <div><p></p></div>
+      <% if @monograph_presenter.epub? %>
+        <div class="btn-group read-buy" role="group" aria-label="">
+            <a id="monograph-read-btn" href="<%= epub_path(@monograph_presenter.epub) %>" title="<%= t('.read', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-lg"><%= t('.read_book') %></a>
+        </div>
+      <% end %>
       <% if @monograph_presenter.isbn? %>
         <div class="isbn">
           <% if @monograph_presenter.isbn_hardcover? %>
@@ -70,23 +74,117 @@
           <% end %>
         </div> <!-- /.isbn -->
       <% end %>
-      <% if @monograph_presenter.buy_url? || @monograph_presenter.epub? %>
-        <div class="btn-toolbar" role="toolbar" aria-label="">
-          <div class="btn-group" role="group" aria-label="">
-            <% if @monograph_presenter.epub? %>
-              <a id="monograph-read-btn" href="<%= epub_path(@monograph_presenter.epub) %>" title="<%= t('.read', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('.read_book') %></a>
-            <% end %>
-            <% if @monograph_presenter.buy_url? %>
-              <a id="monograph-buy-btn" href="<%= @monograph_presenter.buy_url %>" target="_blank" title="<%= t('.buy', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('.buy_book') %></a>
-            <% end %>
-          </div><!-- /.btn-group -->
-        </div><!-- /.btn-toolbar -->
-      <% end %>
+
     </div><!-- /.monograph-metadata -->
-  </div><!-- /.monograph-info -->
-  <hr>
-  <%= render 'catalog/search_sidebar' %>
-<% end %><!-- provide :sidebar -->
-<div class="content">
-  <%= render 'catalog/search_results' %>
-</div><!-- /.content -->
+  </div><!-- /.monograph-info-epub -->
+  <div class="row monograph-assets-toc-epub">
+    <div class="col-sm-12">
+      <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#toc" aria-controls="toc" role="tab" data-toggle="tab">Table of Contents</a></li>
+        <li role="presentation"><a href="#media" aria-controls="media" role="tab" data-toggle="tab">Media</a></li>
+        <li role="presentation"><a href="#stats" aria-controls="stats" role="tab" data-toggle="tab">Stats</a></li>
+      </ul>
+      <div class="tab-content monograph-assets-toc-epub-content">
+        <div role="tabpanel" class="tab-pane active toc row" id="toc">
+          <div class="col-sm-12">
+            <!-- iterate the following for each chapter -->
+            <div class="row chapter">
+              <div class="col-sm-12">
+                <h3><a href="#">Chapter One Title</a></h3>
+                <p>Abstract or first paragraph from the chapter should go here...A common first line for books on contemporary media, and for many a student essay on the subject, notes the saturation of everyday life with media. Certainly, my list of available cable channels seems to grow every month, while the list of movies in cinemas, on television, for rent, or available for purchase similarly proliferates at a precipitous rate. However, media growth and saturation can only be measured in small part by the number of films or television shows—or books, games, blogs, magazines, or songs for that matter—as each and every media text is accompanied by textual proliferation at the level of hype, synergy, promos, and peripherals.</p>
+              </div>
+            </div>
+            <!-- end iteration for each chapter -->
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane media row" id="media">
+          <div class="col-sm-3 sidebar">
+            <%= render 'catalog/search_sidebar' %>
+          </div>
+          <div class="col-sm-9">
+            <div class="content">
+              <%= render 'catalog/search_results' %>
+            </div><!-- /.content -->
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane stats row" id="stats">
+          <div class="col-sm-12 pageviews">
+            <p><%= t('.pageviews_html', count: number_with_delimiter(@monograph_presenter.pageviews)) %></p>
+          </div><!-- /.pageviews -->
+        </div>
+      </div>
+    </div>
+  </div><!-- /.monograph-assets-toc-epub -->
+
+<% else %>
+
+  <% provide :sidebar do %>
+    <div id="maincontent" class="monograph-info">
+      <% if @monograph_presenter.monograph_coins_title? %>
+        <!-- COinS for Zotero, etc -->
+        <span class="Z3988" title="<%= @monograph_presenter.monograph_coins_title %>"></span>
+      <% end %>
+      <div class="monograph-cover">
+        <%= render 'hyrax/base/representative_media', presenter: @monograph_presenter %>
+      </div><!-- /.monograph-cover -->
+      <div class="monograph-metadata">
+        <h2><%= @monograph_presenter.title %></h2>
+        <% if can? :edit, @monograph_presenter %>
+          <%= link_to t('.can_edit'), main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
+        <% end %>
+        <% if @monograph_presenter.authors? %>
+          <h3><%= render_markdown @monograph_presenter.authors %></h3>
+        <% end %>
+        <% if @monograph_presenter.editors? %>
+          <h3><%= t('.edited_by', editors: @monograph_presenter.editors) %></h3>
+        <% end %>
+        <div class="description">
+          <%= render_markdown @monograph_presenter.description.first || '' %>
+        </div><!-- /.description -->
+        <div class="pageviews">
+          <p><%= t('.pageviews_html', count: number_with_delimiter(@monograph_presenter.pageviews)) %></p>
+        </div><!-- /.pageviews -->
+        <div><p></p></div>
+        <% if @monograph_presenter.isbn? %>
+          <div class="isbn">
+            <% if @monograph_presenter.isbn_hardcover? %>
+              <ul class="isbn-hardcover list-unstyled">
+                <% @monograph_presenter.isbn_hardcover.each do |isbn_hardcover| %>
+                    <li><%= t('.isbn_hardcover', isbn: isbn_hardcover) %></li>
+                <% end %>
+              </ul>
+          <% end %>
+            <% if @monograph_presenter.isbn_paper? %>
+              <ul class="isbn-paper list-unstyled">
+                <% @monograph_presenter.isbn_paper.each do |isbn_paper| %>
+                  <li><%= t('.isbn_paper', isbn: isbn_paper) %></li>
+                <% end %>
+              </ul>
+            <% end %>
+            <% if @monograph_presenter.isbn_ebook? %>
+              <ul class="isbn-ebook list-unstyled">
+                <% @monograph_presenter.isbn_ebook.each do |isbn_ebook| %>
+                  <li><%= t('.isbn_ebook', isbn: isbn_ebook) %></li>
+                <% end %>
+              </ul>
+            <% end %>
+          </div> <!-- /.isbn -->
+        <% end %>
+        <% if @monograph_presenter.buy_url? %>
+          <div class="btn-toolbar" role="toolbar" aria-label="">
+            <div class="btn-group" role="group" aria-label="">
+              <% if @monograph_presenter.buy_url? %>
+                <a id="monograph-buy-btn" href="<%= @monograph_presenter.buy_url %>" target="_blank" title="<%= t('.buy', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('.buy_book') %></a>
+              <% end %>
+            </div><!-- /.btn-group -->
+          </div><!-- /.btn-toolbar -->
+        <% end %>
+      </div><!-- /.monograph-metadata -->
+    </div><!-- /.monograph-info -->
+    <hr>
+    <%= render 'catalog/search_sidebar' %>
+  <% end %><!-- provide :sidebar -->
+  <div class="content">
+    <%= render 'catalog/search_results' %>
+  </div><!-- /.content -->
+<% end %><!-- if epub? -->
