--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -18,75 +18,8 @@
     </nav>
   </div>
 <% end %><!-- provide :page_header -->
-<% provide :sidebar do %>
-  <div id="maincontent" class="monograph-info">
-    <% if @monograph_presenter.monograph_coins_title? %>
-      <!-- COinS for Zotero, etc -->
-      <span class="Z3988" title="<%= @monograph_presenter.monograph_coins_title %>"></span>
-    <% end %>
-    <div class="monograph-cover">
-      <%= render 'hyrax/base/representative_media', presenter: @monograph_presenter %>
-    </div><!-- /.monograph-cover -->
-    <div class="monograph-metadata">
-      <h2><%= @monograph_presenter.title %></h2>
-      <% if can? :edit, @monograph_presenter %>
-        <%= link_to t('.can_edit'), main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
-      <% end %>
-      <% if @monograph_presenter.authors? %>
-        <h3><%= render_markdown @monograph_presenter.authors %></h3>
-      <% end %>
-      <% if @monograph_presenter.editors? %>
-        <h3><%= t('.edited_by', editors: @monograph_presenter.editors) %></h3>
-      <% end %>
-      <div class="description">
-        <%= render_markdown @monograph_presenter.description.first || '' %>
-      </div><!-- /.description -->
-      <div class="pageviews">
-        <p><%= t('.pageviews_html', count: number_with_delimiter(@monograph_presenter.pageviews)) %></p>
-      </div><!-- /.pageviews -->
-      <div><p></p></div>
-      <% if @monograph_presenter.isbn? %>
-        <div class="isbn">
-          <% if @monograph_presenter.isbn_hardcover? %>
-            <ul class="isbn-hardcover list-unstyled">
-              <% @monograph_presenter.isbn_hardcover.each do |isbn_hardcover| %>
-                  <li><%= t('.isbn_hardcover', isbn: isbn_hardcover) %></li>
-              <% end %>
-            </ul>
-        <% end %>
-          <% if @monograph_presenter.isbn_paper? %>
-            <ul class="isbn-paper list-unstyled">
-              <% @monograph_presenter.isbn_paper.each do |isbn_paper| %>
-                <li><%= t('.isbn_paper', isbn: isbn_paper) %></li>
-              <% end %>
-            </ul>
-          <% end %>
-          <% if @monograph_presenter.isbn_ebook? %>
-            <ul class="isbn-ebook list-unstyled">
-              <% @monograph_presenter.isbn_ebook.each do |isbn_ebook| %>
-                <li><%= t('.isbn_ebook', isbn: isbn_ebook) %></li>
-              <% end %>
-            </ul>
-          <% end %>
-        </div> <!-- /.isbn -->
-      <% end %>
-      <% if @monograph_presenter.buy_url? || @monograph_presenter.epub? %>
-        <div class="btn-toolbar" role="toolbar" aria-label="">
-          <div class="btn-group" role="group" aria-label="">
-            <% if @monograph_presenter.epub? %>
-              <a id="monograph-read-btn" href="<%= epub_path(@monograph_presenter.epub) %>" title="<%= t('.read', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('.read_book') %></a>
-            <% end %>
-            <% if @monograph_presenter.buy_url? %>
-              <a id="monograph-buy-btn" href="<%= @monograph_presenter.buy_url %>" target="_blank" title="<%= t('.buy', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('.buy_book') %></a>
-            <% end %>
-          </div><!-- /.btn-group -->
-        </div><!-- /.btn-toolbar -->
-      <% end %>
-    </div><!-- /.monograph-metadata -->
-  </div><!-- /.monograph-info -->
-  <hr>
-  <%= render 'catalog/search_sidebar' %>
-<% end %><!-- provide :sidebar -->
-<div class="content">
-  <%= render 'catalog/search_results' %>
-</div><!-- /.content -->
+<% if @monograph_presenter.epub? %>
+    <%= render 'index_epub' %>
+<% else %>
+    <%= render 'index_monograph' %>
+<% end %><!-- if @monograph_presenter.epub? -->
