Resolves #1205, #1206, #1231 add chapters and paragraphs

--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -2,7 +2,7 @@
   <div class="row chapter">
     <div class="col-sm-12">
       <h3><a href="#"><%= chapter.title %></a></h3>
-      <%= chapter.paragraphs[0].html unless chapter.paragraphs.empty? %>
+      <%= chapter.blurb unless chapter.paragraphs.empty? %>
       <hr>
     </div>
   </div>
